--- a/src/main/resources/assets/geckolib3/lang/en_us.json
+++ b/src/main/resources/assets/geckolib3/lang/en_us.json
@@ -2,7 +2,7 @@
   "itemGroup.geckolib_examples": "Geckolib Examples",
 
   "item.geckolib3.potato_head": "Potato Armor Helmet",
-  "item.geckolib3.potato_chestplate": "Potato Armor Chestplate",
+  "item.geckolib3.potato_chest": "Potato Armor Chestplate",
   "item.geckolib3.potato_leggings": "Potato Armor Leggings",
   "item.geckolib3.potato_boots": "Potato Armor Boots",
   "item.geckolib3.jackintheboxitem": "Jack In The Box",
