--- a/src/main/resources/assets/geckolib3/lang/en_us.json
+++ b/src/main/resources/assets/geckolib3/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "itemGroup.geckolib_examples": "Geckolib Examples",
+  "itemGroup.geckolib3.geckolib_examples": "Geckolib Examples",
 
   "item.geckolib3.potato_head": "Potato Armor Helmet",
   "item.geckolib3.potato_chestplate": "Potato Armor Chestplate",
