--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,7 @@
-v3.0.1
+v3.0.2
 
-- Fixed Armor rotations properly #McHorse
-- Fixed BoxUVs and Normals #McHorse
-- Hopefully fixed random missing model crash. #BaileyH
-- GeoLayerRenderer now has a getRenderType method for setting RenderType. #AzureDoom
-- Fixed Animation Singleton sync on items. #grillo78
-- Fixed Item Lighting in GUI #BaileyH/AzureDoom
-- Fixed Entities not going invisible. #AzureDoom
+- Fixed Armor rotations again #McHorse
+- Fixed Geckolib Example entities not having Attributes #Paspartout
+- Fixed Nameplates not showing on custom named mobs. #Paspartout/AzureDoom
+- Fixed the invisible crash on glowing mobs, glowing mobs will now go invisible and glow wih their outline. #AzureDoom
+- Updated to Latest Forge mappings. 
