--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-V3.0.6
+V3.0.7
 
-- Fixed Entities using GeoReplacedEntityRenderer not having name plates when named. #Paspartout
-- Fixed Geckolib Example entities hitboxes. #Paspartout
+- Fixed Geckolib Armor and Entity rendering when used with Patchouli books. 
