--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-v3.0.3
+v3.0.4
 
-- Fixed Geckolib Armor and Entity rendering when used with Patchouli books. 
+- Fixed GeoLayerRender using EntityModel instead of GeoModelProvider #GeoModelProvider
+- Fixed Molang Transition bug #Gecko
