--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-V3.0.8
+V3.0.9
 
-- Fixed GeoLayerRender using EntityModel instead of GeoModelProvider #GeoModelProvider
-- Fixed Molang Transition bug #Gecko
+- Fixed Patchouli being required, used wrong method in build. #AzureDoom
