--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,7 @@
-V3.0.15
+V3.0.16
 
-- Fixed NBT Items resetting the animation on them. #AzureDoom
-- Updatd Core to fix tick resetting bug. #AzureDoom
-- Updated logo being shipped with jar #AzureDoom
-- Changed name of build jar. #AzureDoom
+- Fixed setLivingAnimations not working. #AzureDoom
+- Fixed missing goal from Bat Example. #AzureDoom
+- Improved error message from missing model crash. #AzureDoom
+- Updated the Itemstack with nbt fix becAUsE I hAd AN EXtRa if chEck. #AzureDoom
+- Compressed textures and minified jsons in built jars. #AzureDoom
