--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-V3.0.17
+V3.0.19
 
-- Moved caching fullying to ConcurrentHashMap to hopefuly fix the missing model crashes. #AzureDoom
+- Updated Bike Entity texture to help test faces. #Paspartout
