--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-V3.0.19
+V3.0.20
 
-- Updated Bike Entity texture to help test faces. #Paspartout
+- Added default support for rendering items on entities. https://geckolib.com/en/latest/3.0.0/misc/ #AzureDoom
