--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-v3.0.14
+v3.0.15
 
-- Fixed animation issues with mobs that use variant models/animations. #AzureDoom
-- Fixed Potato Armor not playing in server. #Icosider
+- Added a helpful error message when animation file is missing. #AzureDoom
