--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-V3.0.23
+V3.0.24
 
-- Added a helpful error message when animation file is missing. #AzureDoom
+- Fix block entity rotation (#117) - YummyLoop
