--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.15
+v3.0.16
 
-- Added a helpful error message when animation file is missing. #AzureDoom
+- Fix renderColor's blue/green being flipped (#113) - Denim
