--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-V3.0.26
+V3.0.27
 
-- Fix incorrect block model rendering (#119) - YummyLoop
+- Fix renderColor's blue/green being flipped (#113) - Denim
