--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.16
+v3.0.17
 
-- Fix renderColor's blue/green being flipped (#113) - Denim
+- Added a new GeoRenderer, GeoProjectilesRenderer, simply make your entity face east in BlockBench for it render correctly. - AzureDoom
