--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-V3.0.28
+V3.0.29
 
-- Added a new GeoRenderer, GeoProjectilesRenderer, simply make your entity face east in BlockBench for it render correctly. - AzureDoom
-- Ported UV Face Nullcheck - AzureDoom
+- Implemented the new suggested GeckoLibCache system to fix issues with Java 9+, thanks to Chocohead and cpw for their help! #AzureDoom
