--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-V3.0.29
+V3.0.30
 
-- Implemented the new suggested GeckoLibCache system to fix issues with Java 9+, thanks to Chocohead and cpw for their help! #AzureDoom
+- Improve GeoArmorRenderer to allow single armor peices. #DenimRed
