--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-v3.0.30
+v3.0.31
 
-- Improve GeoArmorRenderer to allow single armor peices. #DenimRed
-- Updated the Library to 1.16.5 and official mappings, there is no reason to still be using 1.16.5, update if you want support. #AzureDoom
+- Fixed items with tags always returning a value of 1, causing all stacks to play the animation. #DenimRed/AzureDoom
