--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.31
+v3.0.32
 
-- Fixed items with tags always returning a value of 1, causing all stacks to play the animation. #DenimRed/AzureDoom
+- New interface for syncing items in mulitplayer, ISyncable. #DenimRed
