--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.32
+v3.0.33
 
-- New interface for syncing items in mulitplayer, ISyncable. #DenimRed
+- Changed private to protected to allow access in child classes. - #grillo78
