--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.33
+v3.0.34
 
-- Changed private to protected to allow access in child classes. - #grillo78
+- Fixed the broken armor rotations for boots.
