--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.33
+v3.0.35
 
-- Changed private to protected to allow access in child classes. - #grillo78
+- For the big babies that just have to use 36.1.0
