--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.37
+v3.0.38
 
-- Bumped core version.
+- Fixed issue with single-keyframe channels with easings not getting loaded properly - Gecko
