--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.38
+v3.0.39
 
-- Fixed issue with single-keyframe channels with easings not getting loaded properly - Gecko
+- Fixed issues with animations not playing on items. 
