--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.1
+v3.0.3
 
-- Fixed issue with single-keyframe channels with easings not getting loaded properly - Gecko
+- Items now syncing correctly.
