--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.39
+v3.0.40
 
-- Fixed issues with animations not playing on items. 
+- Moved JackInTheBoxItem to the proper way of syncing animations, as the Pistol way is the only one to work 1.17 so it will make porting easier. 
