--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,3 @@
-v3.0.40
+v3.0.41
 
-- Moved JackInTheBoxItem to the proper way of syncing animations, as the Pistol way is the only one to work 1.17 so it will make porting easier. 
-- Updated JavaDoc of GeckoLib#initialize() with the fix for shadowing. 
-
-If you are planning using Items with animations, I do not recommend shadowing unless you plan recreating the packet system used in Geckolib in your mod as shadowing and running another copy of Geckolib will crash if GeckoLib#initialize() is called in the shadowed mod.
+- Network redone so it shouldn't crash if another mod shadows Geckolib.
