--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.40
+v3.0.41
 
-- Moved JackInTheBoxItem to the proper way of syncing animations, as the Pistol way is the only one to work 1.17 so it will make porting easier. 
+- Now requires latest Fabric loader and API. 
