--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.41
+v3.0.42
 
-- Network redone so it shouldn't crash if another mod shadows Geckolib.
+- Introduced IGeoBuilder for bones - Gecko
