--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
-v3.0.44
+v3.0.45
 
-- Ported IGeoBuilder from Forge 1.16 - AzureDoom
+- Ported Projectile color fix from Forge 1.16 - AzureDoom
+- Ported GeoItemRender clean up from Forge 1.16 - AzureDoom
+- Updated core - AzureDoom
