--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
-3.0.12
+3.0.13
 
 ***PLEASE NOTE ARMOR IS STILL NOT FIXED***
 
-- Geo Layer Getter #mcpecommander
+- GeoLayerRenderer cleanup #EterDelta
