--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
-3.0.1
+3.0.4
 
 ***PLEASE NOTE ARMOR IS STILL NOT FIXED***
 
-- Fixes publishing artifacts -Draylar 
+- Use remapped jars for publishing to maven - SizableShrimp 
