--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,5 @@
-3.0.14
+3.0.15
 
 ***PLEASE NOTE ARMOR IS STILL NOT FIXED***
 
-- Fixes publishing artifacts -Draylar 
+- Use remapped jars for publishing to maven - SizableShrimp 
