--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.33
+v3.0.34
 
-- Fixed issue with single-keyframe channels with easings not getting loaded properly - Gecko
+- Fixed issue with com.fasterxml dupes.
