--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
-v3.0.0-beta.8
+v3.0.0-beta.9
 
-- Introduced IGeoBuilder for 1.12.2. & small fixes #SleepX10
+- Updated Core
+- Fixed shadow with com.fasterxml
+- Fix for render layers being hardcoded to players - DerToaster98
