--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-3.0.10
+3.0.11
 
-- Updated for 21w43a
+- Updated Core so animations play off screen
+- New AnimatedTickingGeoModel for better ticking entities. Requires IAnimationTickable interface on your entities.
