--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-v3.0.49
+v3.0.50
 
-- Fixed GeoLayerRenderer#getEntityModel
+- Updated Core so animations play off screen
+- New AnimatedTickingGeoModel for better ticking entities. Requires IAnimationTickable interface on your entities.
