--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-v3.0.50
+v3.0.51
 
-- Updated Core so animations play off screen
-- New AnimatedTickingGeoModel for better ticking entities. Requires IAnimationTickable interface on your entities.
+- Updated Core to fix animation bug.
