--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.55
+v3.0.56
 
-- Updated core for non-looping animations
+- Fixes Entities playing the same animation after rejoining world. - SleepL1
