--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.6
+v3.0.7
 
-- Fixes issue with layer animations mob using lerp wrong.
+- GeoReplaced missing EntityModelData head pitch/yaw added.
