--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.61
+v3.0.62
 
-- GeoReplaced missing EntityModelData head pitch/yaw added.
+- Allows changing animation speed in the predicte with setAniamtionSpeed. - s3xi
