--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-3.0.27
+3.0.28
 
-- GeoReplaced missing EntityModelData head pitch/yaw added.
+- Allows changing animation speed in the predicte with setAniamtionSpeed. - s3xi
