--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-v3.0.8
+v3.0.9
 
-- Allows changing animation speed in the predicte with setAniamtionSpeed. - s3xi
+- Fixes Keyframes repeating - ayloncarrijo
+- Fixed issue with core.
