--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-v3.0.10
+v3.0.11
 
-- Core Version Bump
-- Replaces AWT Color with Core Color code.
+- Fixes issues with Custom Instruction Keyframes
