--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-v3.0.65
+v3.0.66
 
-- Fixes issues with Custom Instruction Keyframes
+- Added ExtendedGeoEntityRender that adds in a template for rendering and items on Geckolib mobs. Doesn't support Geckolib Armors at this time.
+- Cleaned up of some parts.
