--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-v3.0.12
+v3.0.13
 
-- Updated for 1.18.2
+- Added ExtendedGeoEntityRender that adds in a template for rendering and items on Geckolib mobs. Doesn't support Geckolib Armors at this time. - DerToaster
+- Cleaned up of some parts.
