--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-3.0.35
+3.0.36
 
-- 1.18.2 Release!
+- Added ExtendedGeoEntityRender that adds in a template for rendering and items on Geckolib mobs. Doesn't support Geckolib Armors at this time.
+- Cleaned up of some parts.
