--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-3.0.36
+3.0.37
 
-- Added ExtendedGeoEntityRender that adds in a template for rendering and items on Geckolib mobs. Doesn't support Geckolib Armors at this time.
-- Cleaned up of some parts.
+- fix armor at wrong position when bones have different sizes #241 - DerToaster
