--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-3.0.1
+3.0.2
 
-- fix armor at wrong position when bones have different sizes #241 - DerToaster
+- Updates Core with Color Presets - mcpecommander
