--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.67
+v3.0.68
 
-- fix armor at wrong position when bones have different sizes #241 - DerToaster
+- Updates Core with Color Presets - mcpecommander
