--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.16
+v3.0.17
 
-- Ports 1.16 ExtendedGeoEntity Changes by DerToaster98
+- Disables Rendering if invisible instead of changing Alpha
