--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-3.0.39
+3.0.40
 
-- Ports 1.16 ExtendedGeoEntity Changes by DerToaster98
+- Disables Rendering if invisible instead of changing Alpha
