--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
-v3.0.17
+v3.0.18
 
-- Disables Rendering if invisible instead of changing Alpha
+- Ports DerToaster changes for hiding bones and texture per bone via code shown in the ExampleExtendedEntity (no plugin or BB support for this currently)
+- Updates Core for GeoBone methods needed hiding bones.
+- Fixes log spam regarding the botarium and fertilizer block item models. 
