--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,3 @@
-3.0.5
+3.0.6
 
-- Ports DerToaster changes for hiding bones and texture per bone via code shown in the ExampleExtendedEntity (no plugin or BB support for this currently)
-- Updates Core for GeoBone methods needed hiding bones.
-- Fixes log spam regarding the botarium and fertilizer block item models. 
+- Example Rocket Projectile back and using proper packet for it's entity for the example.
