--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,3 @@
-v3.0.19
+v3.0.20
 
-- Head rendering support and WIP Geo Armor Support for ExtendedGeoRender - DerToaster
-- Updates Core.
-- Potato Armor example replaced by Wolf Armor, created by  Spectral Studios
+- Moved Event from Render to main class
