--- a/src/main/resources/assets/geckolib3/lang/en_us.json
+++ b/src/main/resources/assets/geckolib3/lang/en_us.json
@@ -1,12 +1,12 @@
 {
   "itemGroup.geckolib_examples": "Geckolib Examples",
 
-  "item.geckolib3.potato_head": "Potato Armor Helmet",
-  "item.geckolib3.potato_chest": "Potato Armor Chestplate",
-  "item.geckolib3.potato_leggings": "Potato Armor Leggings",
-  "item.geckolib3.potato_boots": "Potato Armor Boots",
+  "item.geckolib3.potato_head": "Gecko Armor Helmet",
+  "item.geckolib3.potato_chest": "Gecko Armor Chestplate",
+  "item.geckolib3.potato_leggings": "Gecko Armor Leggings",
+  "item.geckolib3.potato_boots": "Gecko Armor Boots",
   "item.geckolib3.jackintheboxitem": "Jack In The Box",
   "item.geckolib3.pistol": "Pistol",
-  "block.geckolib3.botariumblock": "Botarium",
+  "block.geckolib3.habitatblock": "Gecko Habitat",
   "block.geckolib3.fertilizerblock": "Fertilizer"
 }
