--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.20
+v3.0.21
 
-- Moved Event from Render to main class
+- Addes check to GeoEntityRender and GeoReplacedEntityRenderer for a Mob Entity to render lease if leashed. - HellionGames for code and suggestion for workaround.
