--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,3 @@
-3.0.43
+3.0.44
 
-- Head rendering support and WIP Geo Armor Support for ExtendedGeoRender - DerToaster
-- Updates Core.
-- Potato Armor example replaced by Wolf Armor, created by  Spectral Studios
+- Addes check to GeoEntityRender and GeoReplacedEntityRenderer for a Mob Entity to render lease if leashed. - HellionGames for code and suggestion for workaround.
