--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-3.0.44
+3.0.45
 
-- Addes check to GeoEntityRender and GeoReplacedEntityRenderer for a Mob Entity to render lease if leashed. - HellionGames for code and suggestion for workaround.
+- Fixes wrong getter for z position being used. - DerToaster
