--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.1.1
+v3.1.2
 
-- Updated ExtendedRenderEntity to say correct name.
+- Core Update to fix rotation bug. No changes should be needed for 99% of mods. 
