--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.75
+v3.0.76
 
-- Fixes wrong getter for z position being used. - DerToaster
+- Core Update to fix rotation bug. No changes should be needed for 99% of mods. 
