--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-3.1.0
+3.1.1
 
-- Addes check to GeoEntityRender and GeoReplacedEntityRenderer for a Mob Entity to render lease if leashed. - HellionGames for code and suggestion for workaround.
+- Core Update to fix rotation bug. No changes should be needed for 99% of mods. 
