--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
-3.1.2
+3.1.3
 
-- Revert Core Update. 
+- Emissive/Glow Layer support now added. Please see https://github.com/bernie-g/geckolib/wiki/Emissive-Textures-Glow-Layer - DerToaster.
+- ExtendedGeoEntityRender now supports rendering blocks on the entity. - DerToaster
+- GeoBone#getModelPosition() & GeoBone#getWorldPosition() support added to get the model postion and in-world positions from a bone. Useful for rendering things at a bones in-world location for example. - BobMowzie
