--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-3.0.49
+3.0.50
 
-- fix wrong access modifiers - DerToaster
-- Missing Layer added
+- Fixed double render issue causing massive FPS drops.
