--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-3.1.4
+3.1.5
 
-- fix wrong access modifiers - DerToaster
-- Missing Layer added
+- Fixed double render issue causing massive FPS drops.
