--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-v3.0.26
+v3.0.27
 
-- fix wrong access modifiers - DerToaster
-- Missing Layer added
+- Fixed double render issue causing massive FPS drops.
