--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.1.7
+v3.1.8
 
-- Skips customnpc and moreplayermodels namespaces due to use of animations folder in those mods in 1.18+
+- Requires at least Forge 41.0.64 due to stupid ass forge changes that were suppose to be in 1.19.1 but Forge being Forge loves to fuck over modders.
