--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.1.8
+v3.1.9
 
-- Requires at least Forge 41.0.64 due to stupid ass forge changes that were suppose to be in 1.19.1 but Forge being Forge loves to fuck over modders.
+- Requires at least Forge 41.0.98. If you want a stable system, use Fabric. Don't have to deal with this bullshit there.
