--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
-v3.0.81
+v3.0.82
 
-- Fixed double render issue causing massive FPS drops.
+- Update Core
+- Updated Armor Render
+- Tweaked Entity Render
+- Updated Leash Code - sharffffff
+- Ticking Tweak
+- Tweaked Projectiles Render
+- Update Credits
