--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,3 @@
-3.1.6
+3.1.7
 
-- Update Core
-- Updated Armor Render
-- Tweaked Entity Render
-- Updated Leash Code - sharffffff
-- Ticking Tweak
-- Tweaked Projectiles Render
-- Update Credits
+- Updated for 1.19.1
