--- a/changelog.txt
+++ b/changelog.txt
@@ -1,9 +1,4 @@
-v3.0.82
+v3.0.83
 
-- Update Core
-- Updated Armor Render
-- Tweaked Entity Render
-- Updated Leash Code - sharffffff
-- Ticking Tweak
-- Tweaked Projectiles Render
-- Update Credits
+- Fix GeoProjectilesRender Lag
+- Fix GeoProjectilesRender Animation issues
