--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-v3.1.11
+v3.1.12
 
-- Fix GeoProjectilesRender Lag
-- Fix GeoProjectilesRender Animation issues
+- Deprecated old registerArmorRenderer method in GeoArmorRenderer and updated example code. - DerToaster/AzureDoom
