--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.84
+v3.0.85
 
-- Deprecated old registerArmorRenderer method in GeoArmorRenderer and updated example code. - DerToaster/AzureDoom
+- Fix GeoEntityRenderer render buffers - EterDelta
