--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-v3.1.12
+v3.1.13
 
-- Deprecated old registerArmorRenderer method in GeoArmorRenderer and updated example code. - DerToaster/AzureDoom
+- Fix GeoEntityRenderer render buffers - EterDelta
+- Reenable Patchouli fix.
