--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,4 @@
-v3.1.13
+v3.1.14
 
-- Fix GeoEntityRenderer render buffers - EterDelta
-- Reenable Patchouli fix.
+- Lead render fix - Dominik
+- renderLeash public now.
