--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,3 @@
-3.1.10
+3.1.11
 
-- Fix Patchouli Gradle issue. 
-- Lead render fix - Dominik
-- renderLeash public now.
+- Allows launching in 1.19.1 and higher since 1.19.2 is a non-issue. 
