--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,3 @@
-3.1.14
+3.1.15
 
-- Proper Scaling of Armor on ExtendedRenderEntities - DerToaster
-- Proper bone hiding on GeoRenderEntities -DerToaster 
+- Updated to latest Fabric API.
