--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,4 @@
-v3.1.18
+v3.1.19
 
-- Fixed Extended Entity Render of armor - DerToaster
+- Cleaned up Habitat placment check and proper placement.
+- Code Clean up
