--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -1,4 +1,3 @@
-3.1.18
+3.1.19
 
-- Cleaned up Habitat placment check and proper placement.
-- Code Clean up
+- Updated Core to support all current Molang functions 
