--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -1,4 +1,3 @@
-v3.1.19
+v3.1.20
 
-- Cleaned up Habitat placment check and proper placement.
-- Code Clean up
+- Updated Core to support all current Molang functions 
