--- a/Quilt/changelog.txt
+++ b/Quilt/changelog.txt
@@ -1,5 +1,3 @@
-3.1.18
+3.1.19
 
-- Cleaned up Habitat placment check and proper placement.
-- Code Clean up
-- More imports moved to Quilt versions over Fabric versions. 
+- Updated Core to support all current Molang functions 
