--- a/Fabric/src/main/resources/assets/geckolib3/lang/en_us.json
+++ b/Fabric/src/main/resources/assets/geckolib3/lang/en_us.json
@@ -7,6 +7,6 @@
   "item.geckolib3.potato_boots": "Potato Armor Boots",
   "item.geckolib3.jackintheboxitem": "Jack In The Box",
   "item.geckolib3.pistol": "Pistol",
-  "block.geckolib3.botariumblock": "Botarium",
+  "block.geckolib3.habitatblock": "Gecko Habitat",
   "block.geckolib3.fertilizerblock": "Fertilizer"
 }
