--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -1,3 +1,6 @@
-3.1.19
+3.1.20
 
-- Updated Core to support all current Molang functions 
+- Changed to Parchment MC Mappings.
+- Added Fix to hopefully fix Arch/Multiloader projects
+- Code clean up
+- Added new start of new looping system, does not yet support hold on last frame but frame work is in place - DerToaster98
