--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -1,3 +1,6 @@
-v3.0.38
+v3.0.39
 
-- Updated Core to support all current Molang functions 
+- Changed to Parchment MC Mappings.
+- Code clean up
+- Backported Gecko Habitat
+- Added new start of new looping system, does not yet support hold on last frame but frame work is in place - DerToaster98
