--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -1,3 +1,5 @@
-v3.0.91
+v3.0.92
 
-- Updated Core to support all current Molang functions 
+- Code clean up
+- Backported Gecko Habitat
+- Added new start of new looping system, does not yet support hold on last frame but frame work is in place - DerToaster98
