--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -1,10 +1,10 @@
-v3.1.22
+v3.1.23
 
-- Added example for entity texturePerBone - DerToaster
-- renderRecursively more modular. - DerToaster
-- Started work on bringing texturePerBone to other renders - DerToaster
-- Geo Armor armors fixed - DerToaster
-- Added geckolib.disable_examples system property - williambi https://github.com/bernie-g/geckolib/wiki/Miscellaneous#disabling-geckolib-dev-mode-only-examples
-- Updated armor item names in code.
-- Access clean up (private -> protected)
-- Fixed Molang Parser null crashes
+- Use Getter/Setting methods for RTB - DerToaster
+- Skip special rendering when model gets rerendered in ExtendedGeoEntity Render - DerToaster
+- Change currentModelRenderCycle back to private, use getter.
+- Example Bat Entity left ear now spins, showing child bones be animated by other controllers if not used in another at the same time. 
+- Mirrored textures now work properly.
+
+### Known Issues Still Being Worked On ###
+- getWorldPosition is not returning the correct position.
