--- a/Forge/changelog.txt
+++ b/Forge/changelog.txt
@@ -1,3 +1,3 @@
-v3.0.43
+v3.0.45
 
-- Fixes Armor, Block, Item, Projectile, and Replaced rendering due to missing method.
+- Fixes last build no rendering issues.
