--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -7,3 +7,5 @@ v3.0.99
 - setCurrentRTB moved to default method. 
 - Cleaned up Examples and added new Car Example.
 - Updates core with Molang Update.
+- Fix/Change/Improve a whole slew of things (#314) - Tslat
+- Split AnimationFactory into SingletonAnimationFactory and InstancedAnimationFactory for type-correctness and efficiency. Non-breaking change, marked as deprecated with notes for future breaking change (#315) - Tslat
