--- a/Quilt/changelog.txt
+++ b/Quilt/changelog.txt
@@ -1,3 +1,11 @@
-v3.0.32
+v3.0.33
 
-- Adds back GeoBone#getWorldSpaceNormal
+- Support more simple structure of glowing meta section - DerToaster
+- Moves getWorldSpaceNormal and setWorldSpaceNormal to Deprecated.
+- Moves Maps and Arrays to FastUtil (#313) - Tslat
+- Updates core with FastUtil Update.
+- setCurrentRTB moved to default method. 
+- Cleaned up Examples and added new Car Example.
+- Updates core with Molang Update.
+- Fix/Change/Improve a whole slew of things (#314) - Tslat
+- Split AnimationFactory into SingletonAnimationFactory and InstancedAnimationFactory for type-correctness and efficiency. Non-breaking change, marked as deprecated with notes for future breaking change (#315) - Tslat
