--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -1,11 +1,4 @@
-v3.1.27
+v3.1.28
 
-- Support more simple structure of glowing meta section - DerToaster
-- Moves getWorldSpaceNormal and setWorldSpaceNormal to Deprecated.
-- Moves Maps and Arrays to FastUtil (#313) - Tslat
-- Updates core with FastUtil Update.
-- setCurrentRTB moved to default method. 
-- Cleaned up Examples and added new Car Example.
-- Updates core with Molang Update.
-- Fix/Change/Improve a whole slew of things (#314) - Tslat
-- Split AnimationFactory into SingletonAnimationFactory and InstancedAnimationFactory for type-correctness and efficiency. Non-breaking change, marked as deprecated with notes for future breaking change (#315) - Tslat
+- Fixes shaded libraries being shipped that shouldn't be.
+- Fixes the crash due to loop being false in jsons. (#319) - Tslat 
