Forge 3.0.51/ Fabric 3.0.73/ Quilt 3.0.37

--- a/Fabric/changelog.txt
+++ b/Fabric/changelog.txt
@@ -1,5 +1,8 @@
-v3.0.72
+v3.0.73
 
-- Fix the previous breaking change #329 - Tslat 
-- Fairly significant cleanup of the various renderer classes. #326 - Tslat 
-- Examples update for using EDefaultLoopTypes.
+- Updates Core with Java 17 changes from pervious PR.
+- Fixes Vanilla Armor Crash with Extended Render.
+- Fixes keyframe issue, fixing animations not playing.
+- Fixes broken movement check for entities. 
+- Fixes broken rotations on child bones.
+- Updates Example block entities to EDefaultLoopTypes
